--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,7 +3,7 @@
 # These owners will be the default owners for everything in
 # the repo. Unless a later match takes precedence, they will
 # be requested for review when someone opens a PR.
-*       @noclocks
+*       @noclocks/dev
 *       @jimbrig
 *       @phoward28
 
