--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,4 +1,6 @@
 # Funding
 # https://help.github.com/en/github/administering-a-repository/displaying-a-sponsor-button-in-your-repository
 
-github: noclocks
+github: [noclocks, jimbrig]
+custom: ["https://www.paypal.me/noclocks", noclocks.dev]
+
