--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
 jobs:
   changelog:
-    name: Generate changelog
+    name: Generate Changelog
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,13 +25,13 @@ jobs:
         id: print-changelog
         run: |
           cat "CHANGELOG.md"
-      - name: Commit and Push
-        id: commit-push
+      # Commit and push the updated changelog, IF not a pull request
+      - name: Commit and Push Changelog
+        if: github.event_name != 'pull_request'
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           set +e
           git add CHANGELOG.md
           git commit -m "[chore]: update changelog"
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git "main"      
-        
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git "main"
