--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -6,6 +6,6 @@
 # patreon: noclocks
 # buy_me_a_coffee: noclocks
 
-# github: [noclocks] # PENDING APPROVAL
+# github: [noclocks] # PENDING APPROVAL (, jimbrig, phoward38)
 custom: ["https://www.paypal.me/noclocks", "https://pay.noclocks.dev/b/7sI5o93U4gng9gs5kl"]
 
