--- a/workflow-templates/changelog.yml
+++ b/workflow-templates/changelog.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [ $default-branch ]
   pull_request:
-    branches: [ $default-branch ]
 jobs:
   changelog:
     name: Generate Changelog
@@ -28,6 +27,7 @@ jobs:
           cat "CHANGELOG.md"
       # Commit and push the updated changelog, IF not a pull request
       - name: Commit and Push Changelog
+        if: github.ref == 'refs/heads/$default-branch'
         if: github.event_name != 'pull_request'
         run: |
           git config user.name 'github-actions[bot]'
