--- a/workflow-templates/changelog.yml
+++ b/workflow-templates/changelog.yml
@@ -3,7 +3,12 @@ on:
   workflow_dispatch:
   push:
     branches: [ $default-branch ]
+    paths-ignore:
+      - CHANGELOG.md
+      - .github/**    
   pull_request:
+    branches: [ $default-branch ]
+    types: [ opened, synchronize, closed ]
 jobs:
   changelog:
     name: Generate Changelog
@@ -27,7 +32,6 @@ jobs:
           cat "CHANGELOG.md"
       # Commit and push the updated changelog, IF not a pull request
       - name: Commit and Push Changelog
-        if: github.ref == 'refs/heads/$default-branch'
         if: github.event_name != 'pull_request'
         run: |
           git config user.name 'github-actions[bot]'
