refactor: replace "main" with "$default-branch" in changelog.yml

--- a/workflow-templates/changelog.yml
+++ b/workflow-templates/changelog.yml
@@ -39,4 +39,4 @@ jobs:
           set +e
           git add CHANGELOG.md
           git commit -m "[chore]: update changelog"
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git "main"
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git "$default-branch"
